exports[`test renders 1`] = `
<div
  className="container m-t-1">
  <h1>
    Create a Document
  </h1>
  <form
    onSubmit={[Function bound handleSubmit]}>
    <div
      className="form-group row">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="title">
        Title
      </label>
      <div
        className="col-sm-10">
        <input
          className="form-control"
          id="title"
          onChange={[Function bound handleChange]}
          type="text" />
      </div>
    </div>
    <div
      className="form-group row">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="description">
        Description
      </label>
      <div
        className="col-sm-10">
        <textarea
          className="form-control"
          id="description"
          onChange={[Function bound handleChange]}
          rows="3" />
      </div>
    </div>
    <div
      className="form-group row">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="file">
        <span>
          Content
        </span>
      </label>
      <div
        className="col-sm-10">
        <label
          className="custom-file">
          <input
            className="custom-file-input"
            id="file"
            onChange={[Function onChange]}
            type="file" />
          <span
            className="custom-file-control"
            data-content-value="Choose file..." />
        </label>
      </div>
    </div>
    <div
      className="form-group row">
      <div
        className="offset-sm-2 col-sm-10">
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit">
          Create
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`test validates against empty title and provides feedback 1`] = `
<div
  className="container m-t-1">
  <h1>
    Create a Document
  </h1>
  <form
    onSubmit={[Function bound handleSubmit]}>
    <div
      className="form-group row has-danger">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="title">
        Title
      </label>
      <div
        className="col-sm-10">
        <input
          className="form-control form-control-danger"
          id="title"
          onChange={[Function bound handleChange]}
          type="text" />
        <div
          className="form-control-feedback title-feedback">
          A title is required.
        </div>
      </div>
    </div>
    <div
      className="form-group row">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="description">
        Description
      </label>
      <div
        className="col-sm-10">
        <textarea
          className="form-control"
          id="description"
          onChange={[Function bound handleChange]}
          rows="3" />
      </div>
    </div>
    <div
      className="form-group row">
      <label
        className="col-sm-2 col-form-label"
        htmlFor="file">
        <span>
          Content
        </span>
      </label>
      <div
        className="col-sm-10">
        <label
          className="custom-file">
          <input
            className="custom-file-input"
            id="file"
            onChange={[Function onChange]}
            type="file" />
          <span
            className="custom-file-control"
            data-content-value="Choose file..." />
        </label>
      </div>
    </div>
    <div
      className="form-group row">
      <div
        className="offset-sm-2 col-sm-10">
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit">
          Create
        </button>
      </div>
    </div>
  </form>
</div>
`;
